--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,18 +56,15 @@ body {
 }
 
 /* Hero Section */
-.profile {
-    position: absolute;
-    top: 0px;
-    left: 0;
-    right: 0;
-    bottom: 0px;
-    height: 100%;
-
+#hero {
+    background-image: url("../../resources/images/bg.png");
+    background-repeat: no-repeat;
+    background-position: center right;
+    background-size: cover;
 }
 
 section {
-    padding: 5rem;
+    padding: 5rem 0;
 }
 
 .hero {
@@ -92,6 +89,26 @@ section {
     -moz-transition: scale(1.2);
     -ms-transition: scale(1.2);
     -o-transition: scale(1.2);
+}
+
+#hero h1 .typer {
+    color: var(--secondColor);
+}
+
+/* About Us Section */
+.exp {
+    background-color: var(--gray);
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -o-border-radius: 7px;
+    box-shadow: 0px 30px 45px rgba(22, 22, 22, 0.15);
+}
+
+.exp-number {
+    margin-top: 20px;
+    margin-bottom: -3px;
 }
 
 #particles-js {
