--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,3 +116,28 @@ section {
     width: 100%;
     height: 100%;
 }
+
+/* Skill Section */
+.skill {
+    background: var(--gray);
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    cursor: pointer;
+    transition: all .40s;
+}
+
+.skill-text {
+    color: var(--textColor);
+}
+
+.skill:hover {
+    transform: scale(1.12) rotate(-5deg);
+    -webkit-transform: scale(1.12) rotate(-5deg);
+    -moz-transform: scale(1.12) rotate(-5deg);
+    -ms-transform: scale(1.12) rotate(-5deg);
+    -o-transform: scale(1.12) rotate(-5deg);
+    box-shadow: 0px 10px 25px 10px rgba(9, 132, 206, 40%);
+}
