--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,18 @@ body {
     background-color: var(--primaryColor);
     color: var(--textColor);
 }
-
+section {
+    padding: 5rem 0;
+}
+.main-title {
+    border-bottom-color: var(--secondColor)!important;
+    border-bottom: solid;
+    border-bottom-width: 1px;
+}
+.sub-title {
+    color: var(--secondColor);
+    font-size: 10px;
+}
 /* Navbar Section */
 #mainNavbar {
     background-color: var(--primaryColor)!important;
@@ -63,10 +74,6 @@ body {
     background-size: cover;
 }
 
-section {
-    padding: 5rem 0;
-}
-
 .hero {
     background-position: top;
     background-size: cover;
@@ -95,6 +102,19 @@ section {
     color: var(--secondColor);
 }
 
+.hidden-hero {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 2s;
+}
+
+.show-hero {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+}
+
 /* About Us Section */
 .exp {
     background-color: var(--gray);
@@ -115,6 +135,17 @@ section {
     position: relative;
     width: 100%;
     height: 100%;
+}
+
+.hidden-about {
+    opacity: 0;
+    filter: blur(5px);
+    transition: all 0.5s;
+}
+
+.show-about {
+    opacity: 1;
+    filter: blur(0);
 }
 
 /* Skill Section */
@@ -140,4 +171,102 @@ section {
     -ms-transform: scale(1.12) rotate(-5deg);
     -o-transform: scale(1.12) rotate(-5deg);
     box-shadow: 0px 10px 25px 10px rgba(9, 132, 206, 40%);
+}
+
+.hidden-skill {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(100%);
+    transition: all 0.5s;
+}
+
+.show-skill {
+    opacity: 1;
+    transform: translateX(0);
+    filter: blur(0);
+}
+
+.skill:nth-child(1) {
+    transition-delay: 100ms;
+}
+
+.skill:nth-child(2) {
+    transition-delay: 200ms;
+}
+
+.skill:nth-child(2) {
+    transition-delay: 200ms;
+}
+
+.skill:nth-child(3) {
+    transition-delay: 300ms;
+}
+
+.skill:nth-child(4) {
+    transition-delay: 400ms;
+}
+
+.skill:nth-child(5) {
+    transition-delay: 500ms;
+}
+
+.skill:nth-child(6) {
+    transition-delay: 600ms;
+}
+
+.skill:nth-child(7) {
+    transition-delay: 700ms;
+}
+
+.skill:nth-child(8) {
+    transition-delay: 800ms;
+}
+
+.skill:nth-child(9) {
+    transition-delay: 900ms;
+}
+
+.skill:nth-child(10) {
+    transition-delay: 1000ms;
+}
+
+/* Services Section */
+.hidden-service {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
+}
+
+.show-service {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+}
+
+/* Contact Section */
+.contact-bg {
+    background-color: var(--secondColor);
+    height: 100%;
+}
+form input, textarea, .input-group, .input-bg {
+    color: var(--textColor)!important;
+    background-color: var(--primaryColor)!important;
+    border: solid var(--gray)!important;
+    border-radius: 25px;
+}
+.form-control::placeholder {
+    color: rgba(216, 216, 216, 0.4);
+}
+
+.toast-bg {
+    background-color: #101820;
+    border-radius: 50px!important;
+}
+
+.footer-bg {
+    position: absolute;
+    bottom: 1;
+    left: 50%; /* move the div to the center horizontally */
+    transform: translateX(-50%); /* center the div horizontally */
 }
